# nextnet

./: .gitconfig  .gitignore  .gitmodules  .prettierrc  CHANGELOG.md  Dockerfile  MigrationDockerfile  README.md  dev-docker-compose.yml  dev.env  docker-compose.yml  docker-entrypoint.sh  flake.nix  go.mod  go.sum  init.sh  migration-entrypoint.sh  package-lock.json  package.json  prod-docker.env  shell.nix  srcpatch.sh
.devcontainer/: devcontainer.json
.forgejo-disabled/workflows/: release.yml
.forgejo/workflows/: release.yml
.githooks/: pre-commit
.github/: labeler.yml
.github/workflows/: api-testing.yml  build.yml  label.yml  lom-testing.yml  release.yml
api/: Dockerfile  docker-entrypoint.sh  eslint.config.js  init.sh  package-lock.json  package.json
api/blob/: sshpy.py
api/gosrc/: go.mod  go.sum
api/prisma/: schema.prisma
api/src/: index.ts
apiclient/: apiclient.go
apiclient/backendstructs/: struct.go
apiclient/users/: auth.go  create.go
backend/: Dockerfile  backends.dev.json  backends.prod.json  build.sh  dev.env  go.mod  go.sum
backend-legacy/: Dockerfile
backend-legacy/prisma/: schema.prisma
docs/: nextnet_to_hermes_migration.md  profiling.md  troubleshooting.md
frontend/: dev.env  main.go
gui/: Cargo.toml
gui/src/: api.rs  main.rs
gui/src/components/: log_in.rs  mod.rs
lom/: Dockerfile  LICENSE  diff.diff  docker-entrypoint.sh  eslint.config.js  package-lock.json  package.json  tsconfig.json
prisma/: schema.prisma
src/: index.ts
sshfrontend/: .gitignore  README.md  eslint.config.js  package.json  tsconfig.json
(+185 files in other folders)
