[package]
name = "nextnet-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
ehttp = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
